[package]
name = "sniffer"
version = "0.2.0"
edition = "2024"

[dependencies]
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
serde_yaml = "0.9"
eframe = { version = "0.27", features = ["default"], optional = true }
egui_extras = { version = "0.27", features = ["image"], optional = true }
rfd = { version = "0.15", optional = true }
image = { version = "0.25", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
xz2 = { version = "0.1", optional = true }
walkdir = { version = "2", optional = true }

[features]
default = []
gui = ["eframe", "egui_extras", "rfd", "image", "tar", "flate2", "xz2", "walkdir"]

[[bin]]
name = "sniffer"
path = "src/main.rs"

[[bin]]
name = "snuff"
path = "src/snuff.rs"
required-features = ["gui"]
